<resources>
    <string name="app_name">HeyDate</string>
    <string name="welcome_back">Welcome back! 👋</string>
    <string name="find_match">Find your perfect match 💕</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="i_am">I am</string>
    <string name="female">♀ Female</string>
    <string name="male">♂ Male</string>
    <string name="create_account">Create Account</string>
    <string name="policy_text">By signing up, you agree to our\nTerms of Service and Privacy Policy</string>
    <string name="its_a_match">It\'s a Match!</string>
    <string name="hearts_connected">Hearts connected</string>
    <string name="boy">Boy</string>
    <string name="kotlin_developer">Kotlin Developer</string>
    <string name="girl">Girl</string>
    <string name="java_developer">Java Developer</string>
    <string name="connection_begins">A new connection begins now&#8230;</string>
    <string name="continue_text">Continue</string>
    <string name="set_pin">Set PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="save_pin">Save PIN</string>
    <string name="set_your_pin">Set Your PIN</string>
    <string name="pin_description">Please set a 4-digit PIN for extra security.</string>
</resources>